...
    let creating: Bool
    let addRecipe: ((Recipe) -> Void)?
    let dismiss: (() -> Void)?
    
    private var title: String{
        if recipe.name.isEmpty{
            return "Rezept hinzufügen"
        } else {
            return recipe.name
        }
    }
    
//    @ViewBuilder
...
                        StepRow(step: step, recipe: self.recipe, roomTemp: self.recipeStore.roomTemperature)
                    }
                }
                .onDelete(perform: deleteStep)
                .onMove(perform: moveSteps)
                NavigationLink(destination: AddStepView(recipe: $recipe).environmentObject(recipeStore)) {
                    Text("Schritt hinzufügen")
                }
            }
            
        }
        .listStyle(GroupedListStyle())
        .navigationBarTitle(self.title)
...
