...
        return List {
            Section(header: Text("Name")) {
                TextField("Name eingeben", text: $ingredient.text)
            }
            
            Section(header: Text("Menge")) {
                TextField("0.00 g", text: $amountText) {
                    self.formatAmountText()
                }
            }
        
            Section {
                Toggle("Schüttflüssigkeit", isOn: $ingredient.isBulkLiquid)
            }
        }
        .navigationBarItems(trailing: saveButton)
            .onAppear{
                self.formatAmountText()
                if self.step.ingredients.firstIndex(where: {$0.id == self.ingredient.id}) != nil{
...
